sort.basic.lessons.sort.basic.gnome.AlgGnomeSort.scala.error
AlgGnomeSort:7: error: not found: value PlusPetitQue
if(!PlusPetitQue(i-1,i+1))
    ^AlgGnomeSort:9: error: not found: value i
	echange(i,i+1);
                ^